[FIX][Adding the responsive on the page, first part]

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <body>
        <header class="header">
             <h1><a href="/">Portafolio Web</a></h1>
+            <button>
+                <i></i>
+                <i></i>
+                <i></i>
+            </button>
             <nav class="menu">
                 <ul>
                    <li><a href="/">Inicio</a></li>
@@ -50,11 +55,11 @@
                         eficiente.
                     </p>
                     <div class="proyecto_fotos slider_container1">
-                        <button class="btn1">X</button>
+                        <button class="btn1"><</button>
                         <img class="slider_1" src="./img/Galactycgames1.png" alt="Foto GalactycGames">
                         <img class="slider_1 hidden" src="./img/Galactycgames2.png" alt="Foto GalactycGames">
                         <img class="slider_1 hidden" src="./img/Galactycgames3.png" alt="Foto GalactycGames">
-                        <button class="btn2">X</button>
+                        <button class="btn2">></button>
                     </div>
                     <h4>Tecnologías Usadas</h4>
                     <ul>
@@ -79,14 +84,14 @@
                         información sobre estos.
                     </p>
                     <div class="proyecto_fotos slider_container2">
-                        <button class="btn3">X</button>
+                        <button class="btn3"><</button>
                         <img class="slider_2" src="./img/Inmueble1.png" alt="Foto Inmueble_Ideal">
                         <img class="slider_2 hidden" src="./img/Inmueble2.png" alt="Foto Inmueble_Ideal">
                         <img class="slider_2 hidden" src="./img/Inmueble3.png" alt="Foto Inmueble_Ideal">
                         <img class="slider_2 hidden" src="./img/Inmueble5.png" alt="Foto Inmueble_Ideal">
                         <img class="slider_2 hidden" src="./img/Inmueble4.png" alt="Foto Inmueble_Ideal">
                         <img class="slider_2 hidden" src="./img/Inmueble6.png" alt="Foto Inmueble_Ideal">
-                        <button class="btn4">X</button>
+                        <button class="btn4">></button>
                     </div>
                     <h4>Tecnologías Usadas</h4>
                     <ul>
